Updated default template

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,9 @@
 @(message: String)
 
-@main("Welcome to Play 2.1") {
+@main("Home") {
     
-    @play20.welcome(message, style = "Java")
-    
+	<section>
+		A new section
+	</section>
+
 }
